--- a/style.css
+++ b/style.css
@@ -13,10 +13,16 @@ section#main {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+ 
+  & fieldset {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+  }
+
   & canvas {
-    width: 80vw;
-    height: 80vh;
+    width: 100vw;
+    height: 100vh;
     background-color: black;
     background-image: url(./assets/textures/grass/Grass_01.png);
     background-position: center;
