--- a/style.css
+++ b/style.css
@@ -8,21 +8,28 @@ section#preload {
 }
 
 section#main {
-  height: 100vh;
-  width: 100%;
+  width: calc(3840px * 2);
+  height: calc(2160px * 2);
   display: flex;
   justify-content: center;
   align-items: center;
  
   & fieldset {
-    position: absolute;
+    position: fixed;
     right: 1rem;
     top: 1rem;
+    border: none;
+    backdrop-filter: blur(2px);
+    border-radius: 1rem;
+    padding: 2rem;
+    display: flex;
+    gap: 1rem;
+    box-shadow: 0 1ex 3ex 0rem #000a;
   }
 
   & canvas {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: black;
     background-image: url(./assets/textures/grass/Grass_01.png);
     background-position: center;
